cmake_minimum_required(VERSION 3.0)

project(Lines98 VERSION 1.0.0)

add_executable(Lines98 WIN32
    Lines.cpp
    random.h
    resource.h
    resrc1.h
    Lines.rc
    Lines.ICO
    res/0.bmp
    res/appear_1.bmp
    res/appear_2.bmp
    res/appear_3.bmp
    res/appear_4.bmp
    res/explode_1.bmp
    res/explode_2.bmp
    res/explode_3.bmp
    res/explode_4.bmp
    res/explode_5.bmp
    res/explode_6.bmp
    res/explode_7.bmp
    res/explode_8.bmp
    res/explode_9.bmp
    res/jump_1.bmp
    res/jump_2.bmp
    res/jump_3.bmp
    res/jump_4.bmp
    res/jump_5.bmp
    res/jump_6.bmp
    res/numbers.bmp
    res/points.bmp
    res/prestand.bmp
    res/stand.bmp
    SMALL.ICO
)
